ANTLR4/Aula TP/ExemploANTR4/src/main/java/antlr4/Expressions/antlr4/Expressions.g4
// Expressions.g4

grammar Expressions;

start : expr ;

expr : 	left=expr op=('*'|'/') right=expr # opExprMulDiv
      | left=expr op=('+'|'-') right=expr # opExprSumDif 
      | atom=INT #atomExpr
      ;
INT : ('0'..'9')+ ;
WS : [ \t\r\n]+ -> skip ;
